# homelab-dns

./: .ansible-lint  .gitignore  .yamllint.yml  CHANGELOG.md  CLAUDE.md  README.md  ansible.cfg  inventory.yml  main.py  microcloud-prepare.yml  microcloud-services.yml  mkdocs.yml  pyproject.toml  requirements.yml  site.yml  update-containers.yml  update.yml
.github/workflows/: docs.yml  lint.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
ansible-webhook/: Dockerfile  ansible.cfg  docker-compose.yml  main.py
docs/: ARD.md  PRD.md  USER-GUIDE.md  disaster-recovery.md  how-to.md  index.md  maintenance.md  operations.md  troubleshooting.md  wireguard-clients.md
docs/adr/: adr-001-dedicated-optiplex.md  adr-002-technitium-docker.md  adr-003-wireguard-native.md  adr-004-traefik-keepalived.md  adr-005-nfs-synology.md  adr-006-split-scope-dhcp.md  adr-007-dns01-infomaniak.md  adr-008-dual-monitoring.md  adr-009-apps-on-synology.md  index.md  (+11 more)
playbooks/: microcloud-prepare.yml  microcloud-services.yml  microcloud-vms-monitoring.yml  site.yml  update-containers.yml  update-vms.yml  update.yml
templates/: backup-infra.sh.j2  check-traefik.sh.j2  iptables-rules.v4.j2  keepalived.conf.j2  netplan-infra.yml.j2  netplan-mc.yml.j2  snmp-synology.yml.j2  sync-acme.sh.j2  technitium-compose.yml.j2  traefik-compose.yml.j2  traefik-services.yml.j2  traefik-static.yml.j2  update-ddns.sh.j2  wg-client.conf.j2  wg0.conf.j2  wireguard-compose.yml.j2
tools/: ansible_ai.py  serve-docs.py
(+4 files in other folders)
