[project]
name = "homelab-dns"
version = "0.1.0"
description = "Ansible-automated homelab DNS/HTTPS/VPN infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=13.4.0",
    "ansible-lint>=26.3.0",
    "yamllint>=1.35.0",
    "molecule>=25.0.0",
    "molecule-plugins[docker]>=23.0.0",
]
